--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 see comment at top of Routes.tsx
 
+mudar rotas das apis para usar ifens.
+
+meter authUserTenant a ser a primeira api call a usar tenant no path/route
+
 {user.role}@{user.tenant}
 i18n.changeLanguage('en-US');
 https://react.i18next.com/guides/quick-start
