added delete feature

--- a/src/translations/enGB.json
+++ b/src/translations/enGB.json
@@ -24,7 +24,8 @@
     "description": "Description",
     "update": "Update",
     "title": "Update record",
-    "view-model": "View existing Model"
+    "view-model": "View existing Model",
+    "delete": "Delete"
   },
   "painting-list": {
     "name": "Name",
